[package]
name = "self_sovereign_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
# Asynchronous programming
tokio = { version = "1.0", features = ["full"] }

# Decentralized networking
libp2p = "0.51"

# Data serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptographic operations
ring = "0.16.20"

# Logging
log = "0.4"
env_logger = "0.10"
