[package]
name = "self_sovereign_ai"
version = "0.1.0-beta.0"
edition = "2021"
description = "A library for building self-sovereign AI systems with decentralized networking and cryptography"
license = "MIT OR Apache-2.0" # Choose an appropriate license
# license-file = "LICENSE" # Uncomment if using a custom license file
homepage = "https://ai-robotic-labs.github.io/ai-robotic-labs"
documentation = "https://docs.rs/Self-Sovereign-AI-SDK"
repository = "https://github.com/AI-Robotic-Labs/Self-Sovereign-AI-SDK"
 
[dependencies]
# Asynchronous programming
tokio = { version = "1.0.42", features = ["full"] }

# Decentralized networking
libp2p = "0.55.0"

# Data serialization
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"

# Cryptographic operations
ring = "0.17.0"

# Logging
log = "0.4.22"
env_logger = "0.11.6"