[package]
name = "agi_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rusqlite = { version = "0.37", features = ["bundled"] } # sqlite memory store
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4"] }
thiserror = "2.0"
tracing = "0.1"
futures = "0.3"
# Optional: JSON schema validation (small)
jsonschema = "0.37"
# Self-Sovereign SDK (replace with actual path or git; left as optional)
# self_sovereign_ai = { git = "https://github.com/AI-Robotic-Labs/Self-Sovereign-AI-SDK", branch = "main" }
